# scribe

./: Cargo.toml  HYPERLIST.md  HyperList.hl  HyperListTestSuite.hl  README.md
.github/workflows/: ci.yml  release.yml
src/: buffer.rs  calendar.rs  digraphs.rs  emoji_data.rs  export.rs  fold.rs  help.rs  main.rs  mode.rs  motion.rs  picker.rs  register.rs  search.rs  spell.rs  textobj.rs
